brat/test/golden/error/kbadvec4.brat.golden
Error in test/golden/error/kbadvec4.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 22}}:
f = { [1,2] => true }
    ^^^^^^^^^^^^^^^^^

  Type error: 1 is not of type Bool

